--- a/index.html
+++ b/index.html
@@ -48,4 +48,10 @@ for ($i=0; $i<count($genre); $i++) {
   <hr>
   <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQoB1q9LQfRxWSxBoRVBk0z_Wh53L3Kqe-dAanzLS9bGaC36dpQCdDuJ6glMnh7oc43RHHh52lyu999/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
   </body>
+      <style>
+  iframe {
+    width: 100%;
+    height: 1000px;
+  }
+    </style>
 </html>
