--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="robots" content="noindex">
         <title itemprop="name">Webhodegi_compare_table</title>
-        <link rel="stylesheet" href="/Users/masaaki/Documents/GitHub/webhodegi/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
       </head>
   <body>
   <div class="header">
