--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="noindex">
         <title itemprop="name">Webhodegi_compare_table</title>
-        <link rel="stylesheet" href="/Users/masaaki/Documents/GitHub/webhodegi/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
       </head>
   <body>
   <div class="header">
