--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <h2>保険の種類</h2>
       <div class="categories_ins">
         <a class="medical_ins" href="#">医療保険</a>
-        <a class="cancer_ins" href="#">がん保険</a>
+        <a class="cancer_ins" href="cancer_insurance">がん保険</a>
         <a class="lifetime_ins" href="#">死亡保険(終身)</a>
         <a class="life_regular_ins" href="#">死亡保険(定期)</a>
         <a class="income_security_ins" href="#">収入保障保険</a>
