--- a/cancer_insurance/index.html
+++ b/cancer_insurance/index.html
@@ -133,7 +133,7 @@
         <a class="cancer_ins ins_paged" href="">がん保険</a>
         <a class="lifetime_ins" href="https://masaakifurukawa.github.io/webhodegi/lifetime_insurance">死亡保険(終身)</a>
         <a class="life_regular_ins" href="https://masaakifurukawa.github.io/webhodegi/life_regular_ins">死亡保険(定期)</a>
-        <a class="income_security_ins" href="https://masaakifurukawa.github.io/webhodegi/income_security_ins>収入保障保険</a>
+        <a class="income_security_ins" href="https://masaakifurukawa.github.io/webhodegi/income_security_ins">収入保障保険</a>
       </div>
     </div>
     <div class="budget">
