--- a/income_security_ins/index.html
+++ b/income_security_ins/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="noindex">
         <title itemprop="name">Webhodegi_compare_table</title>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="https://masaakifurukawa.github.io/webhodegi/stylesheet.css">
       </head>
   <body>
   <div class="header">
@@ -129,11 +129,11 @@
     <div class="categories">
       <h2>保険の種類</h2>
       <div class="categories_ins">
-        <a class="medical_ins ins_paged" href="">医療保険</a>
-        <a class="cancer_ins" href="/cancer_insurance">がん保険</a>
-        <a class="lifetime_ins" href="#">死亡保険(終身)</a>
-        <a class="life_regular_ins" href="#">死亡保険(定期)</a>
-        <a class="income_security_ins" href="#">収入保障保険</a>
+        <a class="medical_ins" href="https://masaakifurukawa.github.io/webhodegi">医療保険</a>
+        <a class="cancer_ins" href="https://masaakifurukawa.github.io/webhodegi/cancer_insurance">がん保険</a>
+        <a class="lifetime_ins" href="https://masaakifurukawa.github.io/webhodegi/lifetime_insurance">死亡保険(終身)</a>
+        <a class="life_regular_ins" href="https://masaakifurukawa.github.io/webhodegi/life_regular_ins">死亡保険(定期)</a>
+        <a class="income_security_ins ins_paged" href="">収入保障保険</a>
       </div>
     </div>
     <div class="budget">
