--- a/chubb.html
+++ b/chubb.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="robots" content="noindex">
         <title itemprop="name">Webhodegi_compare_products_page</title>
-        <link rel="stylesheet" href="https://masaakifurukawa.github.io/webhodegi/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
       </head>
     
   <body>
