--- a/chubb.html
+++ b/chubb.html
@@ -10,7 +10,7 @@
   <body>
     <div class="product_page_container">
         <div class="main_container">
-            <iframe class="iframe_product_page" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQBFV2Vx01cEZ214_zzcb2FIJaHJi2YBRRiJHySSeYgM0ZVvriSZuCxwbYFpX4CoA4YfgROk48dAjm1/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+            <iframe class="iframe_product_page" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQBFV2Vx01cEZ214_zzcb2FIJaHJi2YBRRiJHySSeYgM0ZVvriSZuCxwbYFpX4CoA4YfgROk48dAjm1/pubhtml?widget=true&amp;headers=false"></iframe>
         </div>
         <div class="right_container">
             <div class="insurance_info_fixed">
