--- a/cancer_insurance/index.html
+++ b/cancer_insurance/index.html
@@ -265,11 +265,10 @@
         <h3>保障額</h3>
         <select class="security_content" name="security_content">
           <option>指定なし</option>
-          <option>入院日額3,000円</option>
-          <option>入院日額5,000円</option>
-          <option>入院日額10,000円</option>
-          <option>入院日額15,000円</option>
-          <option>入院日額20,000円以上</option>
+          <option>診断給付金50万円</option>
+          <option>診断給付金100万円</option>
+          <option>診断給付金200万円</option>
+          <option>診断給付金300万円以上</option>
         </select>
       </div>
       <div class="detail_choice_area">
