--- a/income_security_ins/index.html
+++ b/income_security_ins/index.html
@@ -265,11 +265,12 @@
         <h3>保障額</h3>
         <select class="security_content" name="security_content">
           <option>指定なし</option>
-          <option>入院日額3,000円</option>
-          <option>入院日額5,000円</option>
-          <option>入院日額10,000円</option>
-          <option>入院日額15,000円</option>
-          <option>入院日額20,000円以上</option>
+          <option>月額5万円</option>
+          <option>月額10万円</option>
+          <option>月額15万円</option>
+          <option>月額20万円</option>
+          <option>月額25万円</option>
+          <option>月額30万円以上</option>
         </select>
       </div>
       <div class="detail_choice_area">
