--- a/lifetime_insurance/index.html
+++ b/lifetime_insurance/index.html
@@ -265,11 +265,11 @@
         <h3>保障額</h3>
         <select class="security_content" name="security_content">
           <option>指定なし</option>
-          <option>入院日額3,000円</option>
-          <option>入院日額5,000円</option>
-          <option>入院日額10,000円</option>
-          <option>入院日額15,000円</option>
-          <option>入院日額20,000円以上</option>
+          <option>100万円</option>
+          <option>200万円</option>
+          <option>300万円</option>
+          <option>400万円</option>
+          <option>500万円以上</option>
         </select>
       </div>
       <div class="detail_choice_area">
