--- a/lifetime_insurance/index.html
+++ b/lifetime_insurance/index.html
@@ -321,7 +321,7 @@
     </script>
   </div>
 </div>
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQoB1q9LQfRxWSxBoRVBk0z_Wh53L3Kqe-dAanzLS9bGaC36dpQCdDuJ6glMnh7oc43RHHh52lyu999/pubhtml?gid=778014107&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<iframe class="lifetime_iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQoB1q9LQfRxWSxBoRVBk0z_Wh53L3Kqe-dAanzLS9bGaC36dpQCdDuJ6glMnh7oc43RHHh52lyu999/pubhtml?gid=778014107&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 <footer>
 募集代理店<br/>
 株式会社フィナンシャル・エージェンシー<br/>
