--- a/fwd-life.html
+++ b/fwd-life.html
@@ -30,7 +30,13 @@
         募集代理店<br/>
         株式会社フィナンシャル・エージェンシー<br/>
         〒150-0013 東京都渋谷区恵比寿1-19-19　恵比寿ビジネスタワー16F<br/>
-        運営者情報　　募集代理店　　利用規約　　プライバシーポリシー　　お問い合わせ　　販売方針　　勧誘方針
+        <a class="footer_link" href="https://www.financial-agency.com/company/about/">会社概要</a>
+        <a class="footer_link" href="">利用規約（準備中）</a>
+        <a class="footer_link" href="https://www.financial-agency.com/compliance/pesonalinfo/">プライバシーポリシー</a>
+        <a class="footer_link" href="https://www.financial-agency.com/contact/">お問い合わせ</a>
+        <a class="footer_link" href="">販売方針（準備中）</a>
+        <a class="footer_link" href="https://www.financial-agency.com/compliance/solicitation/">勧誘方針</a>
+        <a class="footer_link" href="">比較表示ポリシー（準備中）</a>
     </footer>
 </body>
 </html>
