--- a/lifenet-lite.html
+++ b/lifenet-lite.html
@@ -10,7 +10,7 @@
   <body>
     <div class="product_page_container">
         <div class="main_container">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTymYeC1x5RGJe8NVwE65CzdHimWGBubPXD-2LVnjAi9WEoNdzGzGIjyl_Ili6uIB_pw_fF4s2lQbcB/pubhtml?widget=true&amp;headers=false"></iframe>
+            <iframe class="iframe_product_page" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTymYeC1x5RGJe8NVwE65CzdHimWGBubPXD-2LVnjAi9WEoNdzGzGIjyl_Ili6uIB_pw_fF4s2lQbcB/pubhtml?widget=true&amp;headers=false"></iframe>
         </div>
         <div class="right_container">
             <p class="estimate_attention_text">↓実際のページには該当の保険会社名・商品名・商品ロゴ・保険料が表示されます</p>
