--- a/income_security_ins/index.html
+++ b/income_security_ins/index.html
@@ -151,7 +151,7 @@
     </div>
     <div class="sort_ranking">
       <h2>並べ替え</h2>
-      <p class="attention_text">（↓選んだランキングで表示順を変更　※「保険料ランキング」の順位の数字は変更しない）</p>
+      <p class="attention_text">（↓選んだランキングで表示順を変更）</p>
       <div class="sort_ranking_radios">
         <input type="radio" id="sort_ranking_radio1" name="sort_ranking_radios" checked> <label class="sort_ranking_radios" for="sort_ranking_radio1">保険料が安い順</label>
         <input type="radio" id="sort_ranking_radio2" name="sort_ranking_radios"> <label class="sort_ranking_radios" for="sort_ranking_radio2">保険料が高い順</label>
@@ -159,7 +159,7 @@
     </div>
   </div>
   <div class="conditions">
-    <p class="attention_text">（↓選んだ年齢性別で保険料が変わる仕様）</p>
+    <p class="attention_text">（↓選んだ年齢性別で保険料が変わる仕様。条件に当てはまらない商品は非表示）</p>
     <div class="conditions_detail">
       <div class="condition_age_area">  
         <h3>年齢</h3>
@@ -324,10 +324,16 @@
 </div>
 <iframe class="income_iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQoB1q9LQfRxWSxBoRVBk0z_Wh53L3Kqe-dAanzLS9bGaC36dpQCdDuJ6glMnh7oc43RHHh52lyu999/pubhtml?gid=1694112636&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 <footer>
-募集代理店<br/>
-株式会社フィナンシャル・エージェンシー<br/>
-〒150-0013 東京都渋谷区恵比寿1-19-19　恵比寿ビジネスタワー16F<br/>
-運営者情報　　募集代理店　　利用規約　　プライバシーポリシー　　お問い合わせ　　販売方針　　勧誘方針
+  募集代理店<br/>
+  株式会社フィナンシャル・エージェンシー<br/>
+  〒150-0013 東京都渋谷区恵比寿1-19-19　恵比寿ビジネスタワー16F<br/>
+  <a class="footer_link" href="https://www.financial-agency.com/company/about/">会社概要</a>
+  <a class="footer_link" href="">利用規約（準備中）</a>
+  <a class="footer_link" href="https://www.financial-agency.com/compliance/pesonalinfo/">プライバシーポリシー</a>
+  <a class="footer_link" href="https://www.financial-agency.com/contact/">お問い合わせ</a>
+  <a class="footer_link" href="">販売方針（準備中）</a>
+  <a class="footer_link" href="https://www.financial-agency.com/compliance/solicitation/">勧誘方針</a>
+  <a class="footer_link" href="">比較表示ポリシー（準備中）</a>
 </footer>
 
 </body>
