--- a/index.html
+++ b/index.html
@@ -263,9 +263,10 @@
           <option>指定なし</option>
           <option>入院日額3,000円</option>
           <option>入院日額5,000円</option>
+          <option>入院日額8,000円</option>
           <option>入院日額10,000円</option>
           <option>入院日額15,000円</option>
-          <option>入院日額20,000円以上</option>
+          <option>入院日額20,000円</option>
         </select>
       </div>
       <div class="detail_choice_area">
