--- a/cancer_insurance/index.html
+++ b/cancer_insurance/index.html
@@ -266,7 +266,7 @@
           <option>診断給付金50万円</option>
           <option>診断給付金100万円</option>
           <option>診断給付金200万円</option>
-          <option>診断給付金300万円以上</option>
+          <option>診断給付金300万円</option>
         </select>
       </div>
       <div class="detail_choice_area">
