--- a/sompo-himawari-life.html
+++ b/sompo-himawari-life.html
@@ -10,7 +10,7 @@
   <body>
     <div class="product_page_container">
         <div class="main_container">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSXgIoGIeWKa_6SLW6Gl90dXXkqI9LvsjP3hVarvnjJHAuFJBIQnPHQ_0gCJOckuCCLKvLXfSXr5Q0c/pubhtml?widget=true&amp;headers=false"></iframe>        </div>
+            <iframe class="iframe_product_page" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSXgIoGIeWKa_6SLW6Gl90dXXkqI9LvsjP3hVarvnjJHAuFJBIQnPHQ_0gCJOckuCCLKvLXfSXr5Q0c/pubhtml?widget=true&amp;headers=false"></iframe>        </div>
         <div class="right_container">
             <p class="estimate_attention_text">↓実際のページには該当の保険会社名・商品名・商品ロゴ・保険料が表示されます</p>
             <div class="insurance_info_fixed">
