--- a/index.html
+++ b/index.html
@@ -270,8 +270,9 @@
         </select>
       </div>
       <div class="detail_choice_area">
-        <h3>選べる</h3>
-        <button id="modalOpen" class="detail_btn">くわしく設定　＋</button> 
+        <h3>　</h3>
+        <button id="modalOpen" class="detail_btn">検索</button> 
+        <!--
         <div id="Modal" class="modal">
           <div class="modal-content">
             <div class="modal-header"><h2>くわしく設定</h2><span class="modalClose">×</span></div>
@@ -290,7 +291,7 @@
             </div>
             <div class="modalClose keep_btn"><p>保存</p></div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
     <script>
