--- a/result/sompo-himawari-life.html
+++ b/result/sompo-himawari-life.html
@@ -11,27 +11,27 @@
   <div class="result_body">
     <img class="result1" src="https://masaakifurukawa.github.io/webhodegi/estimates/result_page_1.png">
   <div class="pattern">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_0">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_6">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_10">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_20">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_30">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_40">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_50">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_60">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_70">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_80">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_0">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_6">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_10">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_18">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_20">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_30">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_40">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_50">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_60">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_70">
-    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_80">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_0.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_6.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_10.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_20.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_30.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_40.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_50.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_60.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_70.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_80.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_0.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_6.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_10.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_18.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_20.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_30.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_40.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_50.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_60.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_70.png">
+    <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_80.png">
   </div>
     <img class="result2" src="https://masaakifurukawa.github.io/webhodegi/estimates/result_page_2.png">
   </div>
