--- a/result/sompo-himawari-life.html
+++ b/result/sompo-himawari-life.html
@@ -11,6 +11,7 @@
   <div class="result_body">
     <img class="result1" src="https://masaakifurukawa.github.io/webhodegi/estimates/result_page_1.png">
   <div class="pattern">
+      <p class="pattern_male">男性</p>
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_0.png">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_6.png">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_10.png">
@@ -21,6 +22,7 @@
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_60.png">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_70.png">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_male_80.png">
+      <p class="pattern_female">女性</p>
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_0.png">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_6.png">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/himawari_pattern/h_female_10.png">
