--- a/result/fwd-life.html
+++ b/result/fwd-life.html
@@ -10,7 +10,18 @@
   <body>
   <div class="result_body">
     <img class="result1" src="https://masaakifurukawa.github.io/webhodegi/estimates/result_page_1.png">
+<div class="myplan" style="display: flex;">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/FWDlife_estimate.png">
+    <div class="urls">
+        <a href="https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life001?fromComparison=true">https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life001</a>
+        <a href="https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life002?fromComparison=true">https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life002</a>
+        <a href="https://app.hodegidev.financial-agency.com/income_protection_insurances/income_001?fromComparison=true">https://app.hodegidev.financial-agency.com/income_protection_insurances/income_001</a>
+        <a href="https://app.hodegidev.financial-agency.com/income_protection_insurances/income_002?fromComparison=true">https://app.hodegidev.financial-agency.com/income_protection_insurances/income_002</a>
+        <a href="https://app.hodegidev.financial-agency.com/medical_insurances/medical_001?fromComparison=true">https://app.hodegidev.financial-agency.com/medical_insurances/medical_001</a>
+        <a href="https://app.hodegidev.financial-agency.com/medical_insurances/medical_002?fromComparison=true">https://app.hodegidev.financial-agency.com/medical_insurances/medical_002</a>
+        <a href="https://app.hodegidev.financial-agency.com/cancer_insurances/cancer_001?fromComparison=true">https://app.hodegidev.financial-agency.com/cancer_insurances/cancer_001</a>
+    </div>
+</div>
     <img class="result2" src="https://masaakifurukawa.github.io/webhodegi/estimates/result_page_2.png">
   </div>
 
