--- a/result/fwd-life.html
+++ b/result/fwd-life.html
@@ -8,11 +8,15 @@
         <link rel="stylesheet" href="https://masaakifurukawa.github.io/webhodegi/stylesheet.css">
       </head>
   <body>
+      <style>a {
+    display: block;
+    margin: 23px 10px;
+}</style>
   <div class="result_body">
     <img class="result1" src="https://masaakifurukawa.github.io/webhodegi/estimates/result_page_1.png">
 <div class="myplan" style="display: flex;">
     <img class="result_estimate" src="https://masaakifurukawa.github.io/webhodegi/estimates/FWDlife_estimate.png">
-    <div class="urls">
+    <div class="urls" style="padding: 120px 0;>
         <a href="https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life001?fromComparison=true">https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life001</a>
         <a href="https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life002?fromComparison=true">https://app.hodegidev.financial-agency.com/term_death_insurances/regular_life002</a>
         <a href="https://app.hodegidev.financial-agency.com/income_protection_insurances/income_001?fromComparison=true">https://app.hodegidev.financial-agency.com/income_protection_insurances/income_001</a>
